Altercao no Arquivos de Strings

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -29,5 +29,6 @@
     <string name="rate_profit_title">Rentabilidade no período</string>
     <string name="btn_simulate_repeat">Simular novamente</string>
 
+    <string name="teste">Teste</string>
 
 </resources>
