--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="rate_profit_title">Profitability in the period</string>
     <string name="btn_simulate_repeat">Simulate again</string>
 
+    <string name="teste">Test</string>
+
 </resources>
